<resources>
    <string name="app_name">Jornalzinho</string>
    <string name="Noticia1">Heleno diz que presença de Cid em suposta reunião golpista de Bolsonaro com comandantes é fantasia!</string>
    <string name="Noticia2">Heleno diz que Cid não participava de reuniões com comandantes das Forças Armadas; foto desmente</string>
    <string name="Noticia3">Mulher morre após carro ser levado pela água durante enchente em Barra do Ribeiro, diz polícia</string>
    <string name="resumo1">Em delação, ex-ajudante de ordens disse que, após o 2º turno das eleições, então presidente e chefes das Forças Armadas teriam discutido ideia golpista.</string>
    <string name="resumo2">Imagem do perfil oficial do Palácio do Planalto mostra Cid logo atrás de Heleno em "reunião" de Bolsonaro com chefes de Aeronáutica, Exército e Marinha.</string>
    <string name="resumo3">Elizabete Nunes estava no carro com marido e dois netos quando o veículo aquaplanou. Ela não conseguiu deixar o veículo e morreu.</string>

    <string name="corpo1">O ex-ministro do Gabinete de Segurança Institucional (GSI) Augusto Heleno classificou como "fantasia" o relato feito pelo tenente-coronel Mauro Cid, ex-ajudante de ordens de Jair Bolsonaro, de que teria presenciado reuniões em que o então presidente e chefes das Forças Armadas supostamente trataram de um golpe de Estado.

✅ Clique aqui para seguir o novo canal do g1 no WhatsApp
O general da reserva deu a declaração durante depoimento à CPI dos Atos Golpistas, após um questionamento formulado pela relatora da comissão, senadora Eliziane Gama (PSD-MA).

A investigadores da Polícia Federal, Mauro Cid disse que Bolsonaro teria se reunido com integrantes da Marinha e do Exército. Nesses encontros, o então presidente supostamente falou sobre uma "minuta de golpe", que previa ilegalidades como afastamento de autoridades.

O ex-ajudante de ordens afirmou também que o ex-comandante da Marinha Almir Garnier – que supostamente estava na reunião – teria manifestado apoio à ideia.

VÍDEO: general se irrita com falas de relatora e solta palavrões
Questionado por Eliziane se soube da ocorrência dessa reunião, Augusto Heleno declarou:

"Não [tive conhecimento]. E eu quero esclarecer que o tenente-coronel Mauro Cid não participava de reuniões. Ele era o ajudante de ordens do presidente. Não existe essa figura do ajudante de ordens sentar em uma reunião com os comandantes de força e participar da reunião. Isso é fantasia. É fantasia".
Heleno também criticou a divulgação de trechos da delação de Mauro Cid. "Me estranha muito, porque a delação está ainda sigilosa. Ninguém sabe o que o Cid falou", declarou o ex-GSI.

Posteriormente, Eliziane afirmou que Cid, como ajudante de ordens, poderia até não participar da tomada de decisões nas reuniões de Bolsonaro, mas que, segundo relatos obtidos pela CPI, presenciava os encontros.</string>

    <string name="corpo2">O general Augusto Heleno, ex-ministro do Gabinete de Segurança Institucional (GSI) do governo Jair Bolsonaro (PL), negou que o ex-ajudante de ordens Mauro Cid participava de reuniões entre Bolsonaro e os comandantes das Forças Armadas (veja no vídeo acima). Porém, uma foto do próprio governo mostra o contrário.

ASSISTA: Heleno diz a CPI que jamais tratou de assuntos eleitorais no GSI
VÍDEO: Heleno se irrita com relatora da CPI: Ela fala a coisa que ela acha que tá na minha cabeça. É para ficar p..."
"Não e eu quero esclarecer que o tenente-coronel Mauro Cid, ele não participava de reuniões, ele era o ajudante de ordens do presidente da República. Não existe essa figura do ajudante de ordens sentar numa reunião dos comandantes de Força e participar da reunião. Isso é fantasia. Isso é fantasia. É a mesma coisa é essa delação premiada, ou não premiada, do Mauro Cid... Tão apresentando trechos dessa delação e me estranha muito, porque a delação está ainda sigilosa, ninguém sabe o que o Cid falou", disse o general.
O perfil na rede social X, ex-Twitter, Desmentindo Bolsonaro, publicou uma imagem (veja abaixo) que consta no perfil oficial do Palácio do Planalto no site de imagens Flicker. Nela, Bolsonaro está no evento intitulado "Reunião com Ministro da Defesa e Comandantes das Forças Armadas", no dia 25 de fevereiro de 2019. O blog confirmou a informação, que consta neste link.</string>

    <string name="corpo3">Uma mulher morreu nesta terça-feira (26) após o carro onde ela estava ser levado pela água durante uma enchente no interior de Barra do Ribeiro, na Região Metropolitana de Porto Alegre, conforme a Brigada Militar (BM). A vítima foi identificada como Elizabete Terezinha Nunes, 60 anos.

LEIA TAMBÉM

Municípios do RS suspendem aulas em escolas após fortes chuvas
Em Maquiné, passageiros de ônibus são resgatados de alagamento
Novo ciclone se forma entre terça e quarta no estado
Ela estava no carro com o marido e duas crianças, netos do casal, passando pela localidade de Serrinha. Segundo o homem, eles estariam voltando para casa quando houve o acidente.

O homem, que não teve a identidade divulgada, contou ao Corpo de Bombeiros que viu que a estrada estava alagada, mas não pensou que o nível da água estaria tão alto.

O carro ficou preso em uma cerca. O idoso conseguiu sair e tirar as duas crianças. Elizabete, no entanto, não conseguiu sair do carro, que foi levado pela correnteza.

Carro foi levado por correnteza em Barra do Ribeiro. Três pessoas conseguiram se salvar. Mulher morreu — Foto: Divulgação/Brigada Militar
Carro foi levado por correnteza em Barra do Ribeiro. Três pessoas conseguiram se salvar. Mulher morreu — Foto: Divulgação/Brigada Militar

O Corpo de Bombeiros, a Brigada Militar e o Instituto-Geral de Perícias (IGP) foram acionados. O corpo dela foi encontrado 150 metros distante do veículo, que foi localizado capotado em uma área alagada.</string>



</resources>