<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/noticia3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Noticia3"
        android:textSize="20dp"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/resumo3"
        android:textAlignment="gravity"
        android:textSize="15dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/corpo3"
        android:textAlignment="gravity"
        android:textSize="15dp" />


    <Button
        android:id="@+id/botaovolta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Voltar"
        android:layout_marginBottom="20dp"/>
</LinearLayout>